<resources>
    <string name="app_name">ShortNews</string>
    <string name="empty_text"></string>
    <string name="source">By gossip lanka</string>
    <string name="discover">Discover</string>

    <string name="moreAt">Swipe left for more on </string>
    <string name="timestamp">Few hours ago </string>
    <string name="my_feed">Feed</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="image">Image</string>
    <string name="read_more_image">Read More</string>
    <string name="menu">Menu</string>
    <string name="refresh">refresh</string>
    <string name="search">Type keyword</string>
    <string name="search_news">පුවත් සෙවුම </string>
    <string name="topics">Topics</string>
    <string name="short_underline">___</string>
    <string name="swipe_left_here">Swipe left here to read more</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">Contact Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate ShortNews </string>
    <string name="share_shortnews">Share ShortNews </string>
    <string name="web_shortnews">ShortNews Web </string>
    <string name="share_message_text">තත්පර 10න් නවතම පුවත් කියවන්න. කාලය ඉතිරි කරන්න. වැදගත් පුවත් මෙතනින් කියවන්න: https://shortnews.page.link/news</string>
    <string name="share_app_text">Check out ShortNews app. I found it best for reading news. https://shortnews.page.link/news</string>
    <string name="text_download">Download ShortNews \n App Now</string>
    <string name="address">ShortNews.Inc \nWijerama Mawatha,\nUdahamulla,\nNugegoda,\nSrilanka</string>
    <string name="phone_number">+94718177083</string>
    <string name="motto">Explore Sri Lanka Everyday!</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="back_to_top">To top</string>
    <string name="like_us_on_facebook">Like ShortNews Page</string>
    <string name="short_news_facebook_header">On facebook now</string>
    <string name="short_news_facebook_header_desc">Updated news-flash daily on facebook.</string>
    <string name="unable_to_connect">Unable to Connect</string>
    <string name="last_card">Fresh stories are waiting !!</string>
    <string name="less_is_more">Less is More</string>
    <string name="save_time">With 10 second news-flashes, read more and save more time</string>
    <string name="swipe_up">Swipe up</string>
    <string name="skip_intro">Skip</string>
    <string name="new_update">දැන් අලුත් විශේෂාංග රැසක්, නවතම විශේෂාංග ලබා ගැනීම සඳහා යාවත්කාලීන කිරීමට, මෙතන click කරන්න. </string>
    <string name="new_update_card">දැන් අලුත් විශේෂාංග රැසක්, නවතම විශේෂාංග ලබා ගැනීම සඳහා යාවත්කාලීන කරන්න</string>
    <string name="update_now">Update Now  </string>
    <string name="version">V %1$s</string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_minutes">few minutes</string>
    <string name="time_ago_one_hour">one hour</string>
    <string name="time_ago_two_hour">two hours</string>
    <string name="time_ago_hours">few hours</string>
    <string name="time_ago_weeks">%d weeks</string>
    <string name="time_ago_week">%d week</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_day">%d day</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_month">%d month</string>
    <string name="time_ago_years">%d years</string>
    <string name="time_ago_year">%d year</string>
    <string name="check_internet_connection_msg">Please check your internet settings</string>
    <string name="news_below">  &#160;-&#160; පුවත් පහතින් </string>
    <string name="news_up_to_date">  &#160;-&#160; පුවත් යාවත්කාලීනයි, නවතම පුවත් ඉක්මනින් </string>
    <string name="feedback_info">-----------ඔබට වඩා හොඳින් සේවය කිරීමට අපට උදව් කිරීමට කරුණාකර මෙම රේඛාවට ඉහළින් කිසිවක් සංස්කරණය නොකරන්න-----------</string>
    <string name="image_rights_info">&#160; Image used for representation purpose only &#160; </string>
    <string name="no_search_result">No results. Please change keyword and search again</string>
    <string name="error_retry">Data loading error. Please retry!!</string>
    <string name="remind_using_data">&#160; Connect to Wifi to avoid mobile data charges &#160;</string>
    <string name="check_whats_new"><u>Check what\'s new </u></string>

    <string name="facebook_app_id">1354225704775509</string>
    <string name="fb_login_protocol_scheme">fb1354225704775509</string>
    <string name="ad_id">1354225704775509_1963938440470896</string>
    <string name="update_version_card_ad_id">1354225704775509_1963940043804069</string>
    <string name="topic_web_view_bottom_ad_id">1354225704775509_1963940530470687</string>
    <string name="privacy_policy_web_view_bottom_ad_id">1354225704775509_1963939223804151</string>
   <!--dynamic links-->
    <string name="dynamic_links_uri_prefix">shortnews.work</string>
    <string name="reminder_notification_title">Don\'t miss out from latest newsflash</string>
    <string name="reminder_notification_content">රටේ අලුත්ම පුවත් එසැනින් බලාගන්න, දැන්ම පිවිසෙන්න</string>
    <string name="contact_us">Contact Us</string>
    <string name="install">Install</string>
    <string name="email">shortnews4u@gmail.com</string>

</resources>
