<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorCardBackground"
                app:cardCornerRadius="@dimen/corner">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/img_background"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/info_card_image_height"
                        android:src="@drawable/ic_no_internet"
                        android:padding="@dimen/padding_megalarge"
                        android:layout_gravity="center"
                        android:contentDescription="@string/check_internet_connection_msg" />

                <TextView
                        android:id="@+id/img_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/image"
                        android:gravity="center"
                        android:textSize="@dimen/font_xxlarge"
                        android:text="@string/unable_to_connect"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                <TextView
                        android:id="@+id/txt_news_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/image"
                        android:textSize="@dimen/font_large"
                        android:layout_marginTop="@dimen/padding_xlarge"
                        android:gravity="center"
                        android:text="@string/check_internet_connection_msg"
                        android:textColor="@color/contentColor" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_large"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_retry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/image"
                            android:text="@string/retry"
                            android:background="@drawable/round_border_red"
                            android:layout_margin="@dimen/margin_small"
                            android:textColor="@color/white"
                            android:textStyle="bold"/>

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_settings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_border_gray"
                            android:layout_margin="@dimen/margin_small"
                            android:textColor="@color/contentColor"
                            android:text="@string/settings"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
</layout>
