<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="@dimen/corner">

        <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                app:shimmer_direction="bottom_to_top">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/img_card_swipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_swipe_up" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="@string/swipe_up"
                        android:textColor="@color/contentColor"
                        android:textSize="@dimen/font_medium" />
            </LinearLayout>

            <TextView
                    android:id="@+id/txt_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="@dimen/padding_large"
                    android:text="@string/skip_intro"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <ImageView
                    android:id="@+id/img_app_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_app_icon_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_app_icon">

                <TextView
                        android:id="@+id/txt_on_fb1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="@string/short_news_facebook_header"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_xlarge"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/txt_on_fb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_xxxxxxlarge"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.5"
                        android:text="@string/short_news_facebook_header_desc"
                        android:textColor="@color/contentColor"
                        android:textSize="@dimen/font_medium" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_fb_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_large"
                        android:background="@drawable/round_border_blue"
                        android:contentDescription="@string/image"
                        android:drawableRight="@drawable/ic_like"
                        android:drawablePadding="@dimen/padding_medium"
                        android:padding="@dimen/padding_large"
                        android:text="@string/like_us_on_facebook"
                        android:textColor="@color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
