<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/yellow_light"
            app:cardCornerRadius="@dimen/corner">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/info_card_image_height"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_megalarge"
                    android:src="@drawable/ic_app_update" />

            <TextView
                    android:id="@+id/img_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_xxlarge"
                    android:paddingStart="@dimen/padding_xxlarge"
                    android:paddingEnd="@dimen/padding_xxlarge"
                    android:paddingBottom="@dimen/padding_medium"
                    android:text="@string/new_update_card"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/check_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image"
                    android:gravity="center"
                    android:drawablePadding="@dimen/padding_medium"
                    android:textColor="@color/moreShortTextColor"
                    android:paddingBottom="@dimen/padding_medium"
                    android:textSize="@dimen/font_medium"
                    android:text="@string/check_whats_new"
                    android:drawableEnd="@drawable/ic_question_mark"
                    android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding_xxlarge"
                    android:background="@drawable/round_border_green"
                    android:gravity="center"
                    android:padding="@dimen/padding_large"
                    android:text="@string/update_now"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:orientation="horizontal" />
    </androidx.cardview.widget.CardView>
</layout>
