<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="@dimen/corner">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/info_card_image_height"
                    android:padding="@dimen/padding_megalarge"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_final_card" />

            <TextView
                    android:id="@+id/img_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/image"
                    android:gravity="center"
                    android:textSize="@dimen/font_xxlarge"
                    android:text="@string/last_card"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_backto_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding_xxlarge"
                    android:background="@drawable/round_border_red"
                    android:contentDescription="@string/image"
                    android:gravity="center"
                    android:padding="@dimen/padding_small"
                    android:text="@string/back_to_top"
                    android:drawableEnd="@drawable/ic_goto_top"
                    android:drawablePadding="@dimen/padding_medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
