<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <com.xzentry.shorten.utils.SwipePanel
            android:id="@+id/swipePanel"
            tools:context=".LayoutSwipePanelActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mediumGray"
            app:isLeftCenter="false"
            app:leftDrawable="@drawable/ic_back_white"
            app:leftEdgeSize="100dp"
            app:leftSwipeColor="@color/colorAccent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCardBackground">

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:id="@+id/collapsing_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:collapsedTitleTextAppearance="@string/settings"
                        app:contentScrim="?attr/colorPrimary"
                        app:expandedTitleTextAppearance="@string/empty_text"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed"
                        app:statusBarScrim="@color/colorCardBackground"
                        app:title="@string/settings">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.5"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_settings"
                            app:layout_collapseMode="parallax" />

                    <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="pin"
                            app:theme="@style/ToolbarColoredBackArrow"
                            app:titleTextColor="@color/white" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_share"
                            style="@style/TextStyle.Card.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_large"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/share_shortnews"
                            android:textSize="@dimen/font_xlarge"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_rate"
                            style="@style/TextStyle.Card.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_large"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/rate"
                            android:textSize="@dimen/font_xlarge"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_share" />

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_feedback"
                            style="@style/TextStyle.Card.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_large"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/feedback"
                            android:textSize="@dimen/font_xlarge"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_rate" />


                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_terms_conditions"
                            style="@style/TextStyle.Card.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_large"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/terms_conditions"
                            android:textSize="@dimen/font_xlarge"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_feedback" />

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_privacy_policy"
                            style="@style/TextStyle.Card.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_large"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/privacy_policy"
                            android:textSize="@dimen/font_xlarge"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_terms_conditions" />

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_about_us"
                            style="@style/TextStyle.Card.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_large"
                            android:layout_marginTop="@dimen/margin_large"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/about_us"
                            android:textSize="@dimen/font_xlarge"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_privacy_policy" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/app_version"
                    style="@style/TextStyle.Card.Content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    android:gravity="right"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/version"
                    android:textSize="@dimen/font_small" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </com.xzentry.shorten.utils.SwipePanel>
</layout>