<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="top"
                android:background="#111" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/padding">

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="@dimen/marginTop">

                <ImageView
                        android:id="@+id/like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/like"
                        android:padding="@dimen/padding"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_goto_top"
                        android:tag="like_outline" />

            </RelativeLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="@dimen/marginTop">

                <ImageView
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/share"
                        android:padding="@dimen/padding"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/ic_share"
                        android:tag="share" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    android:paddingVertical="@dimen/marginTop">

                <ImageView
                        android:id="@+id/bookmark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/padding"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/bookmark"
                        android:src="@drawable/ic_bookmark_outline"
                        android:tag="bookmark_outline" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>